# Nexus

./: ARCHITECTURE_DIAGRAM.md  DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  INDEX.md  README.md  ROADMAP.md  demo.py  env.example  nexus_demo.py  nexus_demo_enhanced.py  pyproject.toml  requirements.txt  test_nexus.py  test_nexus_basic.py
config/: communication.env.example  communication.yaml
nexus/: __init__.py  core.py
nexus/architecture/: __init__.py  self_modifying.py
nexus/cli/: __init__.py  commands.py  demo.py  main.py
nexus/cognitive/: __init__.py  attention.py  decision_cortex.py  executive.py  goals.py  metacognition.py  planning.py  substrate.py  types.py  working_memory.py
nexus/communication/: __init__.py  communication_manager.py  discord_integration.py  slack_integration.py
nexus/config/: __init__.py  communication_config.py
nexus/core/: __init__.py  nexus_core.py
nexus/cortices/: __init__.py  architecture.py  implementation.py  specification.py  verification.py
nexus/edge/: __init__.py  orchestrator.py  partitioning.py
nexus/enterprise/: __init__.py  integration.py
nexus/execution/: __init__.py  substrate.py
nexus/hybrid/: __init__.py  quantum_simulator.py
nexus/learning/: __init__.py  neuromorphic.py
nexus/memory/: __init__.py  consolidation.py  episodic.py  experience_encoder.py  pattern_detection.py  temporal_graph.py
nexus/monitoring/: __init__.py  system.py
nexus/orchestration/: __init__.py  ensemble.py  model_router.py  multi_modal.py  performance_tracker.py
nexus/quantum/: __init__.py  solver.py
nexus/reasoning/: __init__.py  causal.py  causal_graph.py  counterfactual.py  structure_learning.py
nexus/security/: __init__.py  fabric.py
nexus/swarm/: __init__.py  collective.py  coordinator.py  emergence.py  swarm_execution.py
nexus/workflows/: __init__.py  orchestrator.py  patterns.py
